add README; make names be a bit more comical; fix bug only assigning a portion of the fake names

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
 
-    <title>Skater Chat Window</title>
+    <title>Dictator Skater Chat Window</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -21,10 +21,13 @@
     <div class="container">
         <div class="row">
             <h1 class="span12">Skater Chat</h1>
+            <p class="span12">
+                Where dictators who love to shred come to chat!
+            </p>
             <div class="span12 text-center">
                 <div class="alert alert-info">
                     Current Topic:
-                    <i class="icon-user"></i> <strong>mmartin asked</strong>  &ldquo;What is your favorite skate trick?&rdquo;
+                    <i class="icon-user"></i> <strong>FidelC asked</strong>  &ldquo;What is your favorite gnarly skate trick, my despotic brothers?&rdquo;
                 </div>
             </div>
         </div>
