--- a/index.html
+++ b/index.html
@@ -56,7 +56,25 @@
 
     <script type="text/javascript">
         $(document).ready(function() {
-            $.spreecastChat.init();
+            $.spreecastChat.init({
+
+                // royal purple for the dictators
+                highlightColor: "#7D26CD",
+
+                // add custom messages in addition to the defaults
+                messages: $.spreecastChat.defaults.messages.concat([
+                    "Down with the tyrants!",
+                    "Power to the people!",
+                    "Dictators are boneheads",
+                    "We politely would like to petition for redress of our greivances."
+                ]),
+
+                // woa, cowboy; that's some mighty fast polling!
+                pollDelay: 500,
+
+                // always use the static messages
+                useLoremIpsumRestApi: false
+            });
         });
     </script>
 </body>
