--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/html">
 <head>
 
-    <title>Dictator Skater Chat Window</title>
+    <title>Dictator Skater Chat Window 2.0</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
